# terlang

./: .gitignore  CHANGELOG.md  Makefile  README.md
.github/: WORKFLOWS.md
.github/workflows/: ci.yml
crates/terlan_erlang/: Cargo.toml
crates/terlan_erlang/src/emit/: tests.rs
crates/terlan_syntax/src/: ebnf.rs  syntax_contract.rs
docs/docs/grammar/: TERLANG_SYNTAX_SPEC.ebnf
docs/grammar/: TERLAN_SYNTAX_SPEC.ebnf
tests/fixtures/phase_contract/: phase_atom_literal.core.golden  phase_atom_literal.emit.golden  phase_atom_literal.resolve.golden  phase_atom_literal.tl  phase_basic.core.golden  phase_basic.emit.golden  phase_basic.resolve.golden  phase_basic.tl  phase_binary_eq.core.golden  phase_binary_eq.emit.golden  phase_binary_eq.resolve.golden  phase_binary_eq.tl  phase_binary_gt.core.golden  phase_binary_gt.emit.golden  phase_binary_gt.resolve.golden  phase_binary_gt.tl  phase_binary_gte.core.golden  phase_binary_gte.emit.golden  phase_binary_gte.resolve.golden  phase_binary_gte.tl  phase_binary_literal.core.golden  phase_binary_literal.emit.golden  phase_binary_literal.resolve.golden  phase_binary_literal.tl  phase_binary_lt.core.golden  phase_binary_lt.emit.golden  phase_binary_lt.resolve.golden  phase_binary_lt.tl  phase_binary_lte.core.golden  phase_binary_lte.emit.golden  phase_binary_lte.resolve.golden  phase_binary_lte.tl  phase_binary_mul.core.golden  phase_binary_mul.emit.golden  phase_binary_mul.resolve.golden  phase_binary_mul.tl  phase_binary_sub.core.golden  phase_binary_sub.emit.golden  phase_binary_sub.resolve.golden  (+74 more)
tools/: validate_ebnf.py
(+3 files in other folders)
